fix: fix form overlay (invisible header)

--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -10,7 +10,7 @@
 
   &__wrapper {
     position: relative;
-    padding-top: 250px;
+    padding-top: 300px;
     padding-bottom: 42px;
     display: flex;
     align-items: flex-start;
