--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -9,6 +9,10 @@
     display: flex;
     justify-content: space-between;
     column-gap: 20px;
+
+    &.is-active {
+      display: none;
+    }
   }
 
   &__button {
